[package]
name = "bellman-bignat"
version = "0.1.0"

[dependencies]
bincode = "1.2.1"
derivative = "1.0.0"
docopt = "1"
fnv = "1.0.6"
rand = "0.4.5"
hex = "0.3.2"
time = "0.1"
num-iter = "0.1"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"
rayon = "1.3"
sapling-crypto = { package = "sapling-crypto_ce", git = "https://github.com/alex-ozdemir/sapling-crypto", branch = "bls12-poseidon" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.8.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
color-backtrace = { version = "0.2" }

[dependencies.gmp-mpfr-sys]
version = "1.2"
default-features = false

[dependencies.rug]
version = "1.7"
default-features = false
features = ["integer", "serde"]
