[package]
name = "bellman-bignat"
version = "0.1.0"

[dependencies]
bincode = "1.2"
bitintr = "0.3.0"
derivative = "1.0.0"
docopt = "1"
flate2 = "1.0"
fnv = "1.0.6"
gmp-mpfr-sys = { version = "1.2", default-features = false }
hex = "0.3.2"
rand = "0.4"
rayon = "1.3"
rug = { version = "1.7", default-features = false, features = ["integer", "serde", "rand"] }
sapling-crypto = { package = "sapling-crypto_ce", git = "https://github.com/alex-ozdemir/sapling-crypto", branch = "bls12-poseidon" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.8.0"
time = "0.1"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
color-backtrace = { version = "0.2" }
